[project]
name = "polyglot-multilingual-learning-assistant"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]
